--- a/talks/wastewater/index.html
+++ b/talks/wastewater/index.html
@@ -85,13 +85,13 @@ class: title-slide
 
 ### [MRC Centre for Environment and Health](https://environment-health.ac.uk/) | Imperial College London    
 
-### LSE, Department of Statistics, London 
+### Workshop on Ecological and Environmental Statistics, Lancaster University 
 
 &lt;!-- Can also separate the various components of the extra argument 'params', eg as in 
-### LSE, Department of Statistics, London, 15th May 2023, Modelling wastewater concentration during the COVID-19 pandemic
+### Workshop on Ecological and Environmental Statistics, Lancaster University, 12th September 2023, A spatio-temporal framework to integrate wastewater and disease prevalence for public health surveillance
 --&gt;
 
-15th May 2023
+12th September 2023
 
 ---
 
@@ -102,23 +102,12 @@ layout: true
 &amp;nbsp; &amp;copy; Marta Blangiardo
 ]
 .aligncenter[
-Modelling wastewater concentration during the COVID-19 pandemic 
+A spatio-temporal framework to integrate wastewater and disease prevalence for public health surveillance 
 ]
 .alignright[
-LSE, Department of Statistics, NA 
+Workshop on Ecological and Environmental Statistics, NA 
 ]
 ] 
-
-
-&lt;style&gt;
-pre {
-  overflow-x: auto;
-}
-pre code {
-  word-wrap: normal;
-  white-space: pre;
-}
-&lt;/style&gt;
 
 
 ---
@@ -204,10 +193,10 @@ Success stories:
 
 # Wastewater during the COVID-19 pandemic
 
-- WBE has been recognised as an economically efficient approach for disease surveillance (Manuel, et al., 2022)
+- WBE has been recognised as an economically efficient approach for disease surveillance (Manuel et al., 2022)
 
 - Methods to detect the presence of SARS-CoV-2 RNA in wastewater have
-been developed in a number of countries (Tlhagale, et al., 2022)
+been developed in a number of countries (Tlhagale et al., 2022)
 
 - Scientific contributions to date have focused on the level of the sewage treatment works (STWs) where the
 measurements of SARS-CoV-2 RNA from wastewater are obtained.
@@ -239,8 +228,7 @@ concentration over a spatially continuous domain.
 --
 
 .center[.content-box-blue[
-**First law of geography** (W. Tobler, 1970): everything is related to everything else, but near things are more related than distant things 
-]
+**First law of geography** (W. Tobler, 1970): everything is related to everything else, but near things are more related than distant things]
 ]
 
 --
@@ -528,7 +516,7 @@ with `\(\sigma^2_y\)` as the measurement error variance. For the latent mean con
 
 `$$\mu_{it} = \alpha_{region_{g_i}} + \bm{x}_i \bm{\beta} +  u_i + v_t + {\color{red}z_{it}}$$`
 
-- `\(\color{red}{z_{it}}\)`: spatio-temporal random effect, modelled as a temporal autoregressive structure with spatially correlated innovations, similar to Cameletti, et al. (2011a):
+- `\(\color{red}{z_{it}}\)`: spatio-temporal random effect, modelled as a temporal autoregressive structure with spatially correlated innovations, similar to Cameletti et al. (2011):
 `\begin{align*}
 t = 1 \qquad \boldsymbol{z}_t &amp;\sim \text{Normal}(0,\Sigma_{z})\\
 t &gt; 1 \qquad \boldsymbol{z}_t &amp;\sim \text{Normal}(\rho\boldsymbol{z}_{t-1},\Sigma_{z})
@@ -571,146 +559,6 @@ The posterior predictive distribution at the LSOA centroids can be combined to r
 
 - Implemented in R-INLA 
 
----
-
-# Latent Gaussian models (LGMs)
-- The general problem of (parametric) inference is posited by assuming a probability model for the observed data `\(\boldsymbol y=\left(y_1,\ldots, y_n\right)\)`, as a function of some relevant parameters
-
-&lt;span style="display:block; margin-top: -10px ;"&gt;&lt;/span&gt;
-
-.myblue[$$\boldsymbol{y} \mid \boldsymbol{\theta},\boldsymbol\psi \sim p(\boldsymbol{y} \mid \boldsymbol{\theta},\boldsymbol\psi) = \prod_{i=1}^n p(y_i \mid \boldsymbol{\theta},\boldsymbol\psi)$$]
---
-
-&lt;span style="display:block; margin-top: -10px ;"&gt;&lt;/span&gt;
-
-- Often (in fact for a surprisingly large range of models!), we can assume that the parameters are described by a .red[**Gaussian Markov Random Field** (GMRF)]
-
-
-.myblue[
-`$$\boldsymbol{\theta} \mid \boldsymbol\psi \sim \text{Normal}(\boldsymbol 0,\boldsymbol{Q^{-1}}(\boldsymbol\psi))$$`]
-
-.myblue[
-`$$\theta_i \perp\!\!\!\perp \theta_j \mid \boldsymbol\theta_{-i,j}   \Longleftrightarrow Q_{ij}(\boldsymbol\psi)=0$$`
-]
-
-&lt;span style="display:block; margin-top: -20px ;"&gt;&lt;/span&gt;
-
-where 
-- The precision matrix `\(\bm Q\)` depends on some hyperparameters `\(\bm\psi\)` .
-- The notation `\(-i,j\)` indicates all the other elements of the parameters vector, excluding elements `\(i\)` and `\(j\)`
-- The components of `\(\bm \theta\)` are supposed to be *conditionally independent* with the consequence that `\(\bm Q\)` is a sparse precision matrix.
-
-- This kind of models is often referred to as .olive[**Latent Gaussian models**].
-
----
-
-# LGMs as a general framework
-
-- In general
-
-.myblue[
-`\begin{align*}
-\bm y \mid \bm \theta,\bm\psi  &amp;\sim  \prod_i p(y_i\mid\bm\theta,\bm\psi)\class{black}{\mbox{  (Data model)}}\\
-\bm\theta \mid \bm\psi &amp;\sim  p(\bm\theta\mid\bm\psi) = \mbox{Normal}(0,\bm Q^{-1}(\bm\psi)) \class{black}{\mbox{  (Latent Gaussian Field)}}\\
-\bm\psi &amp;\sim p(\bm\psi) \class{black}{\mbox{ (Hyperprior)}}
-\end{align*}`
-]
-
---
-
-&lt;span style="display:block; margin-top: 30px ;"&gt;&lt;/span&gt;
-
-- The dimension of `\(\class{myblue}{\bm\theta}\)` can be very large (eg 10 `\(^2\)`-10 `\(^5\)`).
-
-&lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt;
-
-- Conversely,  the dimension of `\(\class{myblue}{\bm\psi}\)` must be relatively small (less than 20 is recommended) to avoid an exponential increase in the computational costs of the model.
-
----
-
-# LGMs as a general framework
-
-- A very general way of specifying the problem is specifying a distribution for `\(\class{myblue}{y_i}\)` characterized by a parameter  `\(\class{myblue}{\phi_i}\)` (usually the mean) defined as a function of a structured additive predictor `\(\class{myblue}{\eta_i}\)`, defined on a suitable scale, such that  `\(\class{myblue}{g(\phi_i)=\eta_i}\)` (e.g. logistic for binomial data):
-
-.myblue[
-`$$\eta_i = \beta_0 + \sum_{m=1}^M \beta_m x_{mi} + \sum_{l=1}^L f_l(z_{li})$$`
-]
-
-where
-- `\(\beta_0\)` is the intercept; 
-- `\(\bm\beta=\{\beta_1,\ldots,\beta_M\}\)` quantify the effect of the covariates `\(\bm{x}=(\bm{x_1},\ldots, \bm{x_M})\)` on the response; 
-- `\(\bm{f}=\{f_1(\cdot),\ldots,f_L(\cdot)\}\)` is a set of functions defined in terms of some covariates `\(\bm{z}=(\bm z_1,\ldots, \bm z_L)\)`
-
-and then assume 
-
-`$$\class{red}{\bm\theta=\{\beta_0,\bm \beta,\bm f \} \sim \mbox{Normal}(\bm 0,\bm Q^{-1}(\bm\psi)) = \mbox{GMRF}(\bm\psi)}$$`
-
---
-
-- **NB**: This of course implies some form of Normally-distributed marginals for `\(\beta_0,\bm{\beta}\)` and `\(\bm{f}\)`
-
----
-
-
-# INLA &amp;ndash; in a nutshell...
-
-.pull-left[
-.medium[
-&lt;ol style="counter-reset: my-counter 0;"&gt;
-&lt;li&gt;Select a grid of \(H\) points \(\{\bm\psi_h^*\}\) and area weights \(\{\Delta_h\}\); interpolate the density to approximate to the posterior&lt;/li&gt;
-&lt;/ol&gt;
-]
-
-&lt;span style="display:block; margin-top: 18px ;"&gt;&lt;/span&gt;
-&lt;center&gt;&lt;img src=./img/inla1-1.png width='80%' title=''&gt;&lt;/center&gt;
-]
-
---
-
-.pull-right[
-.medium[
-&lt;ol style="counter-reset: my-counter 1;"&gt;
-&lt;li&gt; Approximates the conditional posterior of each \(\theta_j\), given \(\bm\psi, \bm{y}\) on the \(H−\)dimensional grid&lt;/li&gt;
-&lt;/ol&gt;
-]
-
-&lt;span style="display:block; margin-top: 50px ;"&gt;&lt;/span&gt;
-&lt;center&gt;&lt;img src=./img/inla2-1.png width='85%' title=''&gt;&lt;/center&gt;
-]
-
----
-
-count: false
-# INLA &amp;ndash; in a nutshell...
-
-.pull-left[
-.medium[
-&lt;ol style="counter-reset: my-counter 2;"&gt;
-&lt;li&gt; Weight the conditional marginal posteriors by the density associated with each \(\psi_h^*\)
-&lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
-&lt;/li&gt;
-&lt;/ol&gt;
-]
-
-&lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt;
-
-&lt;center&gt;&lt;img src=./img/inla3-1.png width='85%' title=''&gt;&lt;/center&gt;
-]
-
---
-
-.pull-right[
-.medium[
-&lt;ol style="counter-reset: my-counter 3;"&gt;
-&lt;li&gt; (Numerically) sum over all the conditional densities to obtain the marginal posterior for \(\theta_j\)
-&lt;span style="display:block; margin-top: 50px ;"&gt;&lt;/span&gt;
-&lt;/li&gt;
-&lt;/ol&gt;
-]
-
-&lt;span style="display:block; margin-top: -10px ;"&gt;&lt;/span&gt;
-&lt;center&gt;&lt;img src=./img/inla4-1.png width='85%' title=''&gt;&lt;/center&gt;
-]
 
 ---
 
@@ -768,7 +616,7 @@ E = I(\mu_{lt} &gt; \mu_{l(t-1)} &gt; \mu_{l(t-2)})
 where `\(I(\cdot)\)` is the indicator function.
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
-A high predictive probability, `\({\rm Prob}(E)&gt;c\)` for a pre-specified threshold `\(c\)`, would then trigger a warning of a potential outbreak. This approach has been used for public health surveillance in both high-income (Diggle, et al., 2005) and low-to-middle-income (Diggle, et al., 2007) countries. 
+A high predictive probability, `\({\rm Prob}(E)&gt;c\)` for a pre-specified threshold `\(c\)`, would then trigger a warning of a potential outbreak. This approach has been used for public health surveillance in both high-income (Diggle et al., 2005) and low-to-middle-income (Diggle et al., 2007) countries. 
 ]
 
 .panel[.panel-name[Mapping]
@@ -792,11 +640,11 @@ To visualise these rich model outputs, we have created a dynamic and interactive
 # Wastewater viral concentration and COVID-10 prevalence
 
 - Several studies have evaluated the relationship between viral load in
-wastewater and prevalence of COVID-19 disease (e.g. Shah, et al. (2022), Proverbio, et al. (2022))
+wastewater and prevalence of COVID-19 disease (e.g. Shah et al. (2022), Proverbio et al. (2022))
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
 
-- Morvan, et al. (2022) analysed data from 45 STWs across England
+- Morvan et al. (2022) analysed data from 45 STWs across England
 between July 2020 and March 2021. Using a multilevel modelling approach
 they reported that wastewater samples can be used successfully to predict
 COVID-19 prevalence, with a lead time of four to five days. 
@@ -808,7 +656,7 @@ COVID-19 prevalence, with a lead time of four to five days.
 
 &lt;!-- # COVID-19 debiased prevalence
 
-- Debiased prevalence was estimated combining testing data and the REal-time Assessment of Community Transmission (REACT) randomised survey Riley, et al. (2020) using the method proposed by Nicholson, et al. (2022)
+- Debiased prevalence was estimated combining testing data and the REal-time Assessment of Community Transmission (REACT) randomised survey Riley et al. (2020) using the method proposed by Nicholson et al. (2022)
 
 - Test positivity rates in Pillar 2 data are strongly biased upwards relative to the population prevalence proportion as the testing is directed
 at the higher risk population
@@ -838,7 +686,7 @@ P(n \text{ of } N | I, \delta, \nu) &amp;= \text{Binomial}(n | I, P(\text{Tested
 
 # Wastewater viral concentration and COVID-19 prevalence
 
-- Debiased prevalence was estimated combining testing data and the REal-time Assessment of Community Transmission (REACT) randomised survey Riley, et al. (2020) using the method proposed by Nicholson, et al. (2022)
+- Debiased prevalence was estimated combining testing data and the REal-time Assessment of Community Transmission (REACT) randomised survey Riley et al. (2020) using the method proposed by Nicholson et al. (2022)
 
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
@@ -919,7 +767,7 @@ a finer spatial scale?
 
 - Wastewater predictions available from the geostatistical model
 
-- Posterior distribution of COVID-19 prevalence obtained through Nicholson, et al. (2022) 
+- Posterior distribution of COVID-19 prevalence obtained through Nicholson et al. (2022) 
 
 --
 
@@ -947,7 +795,7 @@ where
 
 - Wastewater predictions available from the geostatistical model
 
-- Posterior distribution of COVID-19 prevalence obtained through Nicholson, et al. (2022) 
+- Posterior distribution of COVID-19 prevalence obtained through Nicholson et al. (2022) 
 
 --
 
@@ -1001,25 +849,45 @@ where
 ---
 
 # Results
+.panelset[
+.panel[.panel-name[RMSE]
 
-.pull-left[&lt;center&gt;&lt;img src=./img/Results.png width='150%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+.pull-left[&lt;center&gt;&lt;img src=./img/RMSE_LTLA.png width='80%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
 ]
 
 .pull-right[
-- Using wastewater data helps to improve the quality of the disaggregated LTLA prevalence (lower RMSE and better coverage) consistently across all disaggregation horizons.
+&lt;center&gt;&lt;img src=./img/Boxplot.png width='130%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
 
-- Not large difference between the model 2 and model 3
-
-- Some geographical variation
+&lt;center&gt;&lt;img src=./img/Results.png width='130%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+]
 
 ]
 
-&lt;span style="display:block; margin-top: -20px ;"&gt;&lt;/span&gt;
-&lt;center&gt;&lt;img src=./img/Boxplot.png width='80%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+.panel[.panel-name[Disease prevalence comparison]
 
+.pull-left[&lt;span style="display:block; margin-top: 40px ;"&gt;&lt;/span&gt;
+&lt;center&gt;&lt;img src=./img/Heatmap.png width='100%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+
+]
+
+
+.pull-right[&lt;span style="display:block; margin-top: 5px ;"&gt;&lt;/span&gt;
+&lt;center&gt;&lt;img src=./img/Scatterplot.png width='80%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+]
+- Some periods (e.g. Christmas are showing larger differences)
+
+- Some areas are consistently underestimated/overestimated
+ 
+]
+]
+
+&lt;!--&lt;span style="display:block; margin-top: -20px ;"&gt;&lt;/span&gt;
+&lt;center&gt;&lt;img src=./img/Boxplot.png width='80%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+--&gt;
 
 ---
 
+&lt;!--
 # Results
 
 .pull-left[&lt;span style="display:block; margin-top: 40px ;"&gt;&lt;/span&gt;
@@ -1035,7 +903,8 @@ where
 
 `\(\rightarrow\)` Some areas are consistently underestimated/overestimated
 
----
+--&gt;
+
 # What's next
 
 How can wastewater be incorporated into a real-time, multiplex public health surveillance system?
@@ -1106,13 +975,13 @@ The proposed framework for disaggregation demonstrates the added-value of wastew
 
 - Starting point but a long way to go
 
-`\(\rightarrow\)` should be extended to include other data sources, such as syndromic and secondary care data, to enable quantitatively accuratemonitoring of disease evolution across a population.
+`\(\rightarrow\)` should be extended to include other data sources, such as syndromic and secondary care data, to enable quantitatively accurate monitoring of disease evolution across a population.
 
 ---
 
 # References
 
-Cameletti, M. et al. (2011a). "Comparing spatio-temporal models for
+Cameletti, M. et al. (2011). "Comparing spatio-temporal models for
 particulate matter in Piemonte". In: _Environmetrics_ 22.8, pp.
 985-996.
 
