Update slides Lancaster

--- a/talks/wastewater/index.html
+++ b/talks/wastewater/index.html
@@ -832,17 +832,19 @@ where
 
 # Results
 .panelset[
+
+.panel[.panel-name[Model comparison]
+&lt;center&gt;&lt;img src=./img/Results.png width='100%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+]
+
 .panel[.panel-name[RMSE]
 
-.pull-left[&lt;center&gt;&lt;img src=./img/RMSE_LTLA.png width='80%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+.pull-left[&lt;center&gt;&lt;img src=./img/RMSE_LTLA.png width='70%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
 ]
 
 .pull-right[
-&lt;center&gt;&lt;img src=./img/Boxplot.png width='130%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
-
-&lt;center&gt;&lt;img src=./img/Results.png width='130%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src=./img/Boxplot.png width='150%' title='INCLUDE TEXT HERE'&gt;&lt;/center&gt;
 ]
-
 ]
 
 .panel[.panel-name[Disease prevalence comparison]
